<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/c_country_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="?attr/colorSurface"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_country_name_header"
            style="@style/Widget.TextView.Normal.Heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:paddingBottom="10dp"
            android:text="singapore"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_country_id_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:paddingBottom="10dp"
            android:text="@string/id_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_country_name_header" />

        <TextView
            android:id="@+id/tv_country_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:paddingBottom="10dp"
            app:layout_constraintBottom_toBottomOf="@id/tv_country_id_title"
            app:layout_constraintStart_toEndOf="@+id/tv_country_id_title" />


        <TextView
            android:id="@+id/tv_country_desc_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:paddingBottom="10dp"
            android:text="@string/details_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_country_name" />

        <TextView
            android:id="@+id/tv_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:hint="101"
            android:paddingBottom="10dp"
            app:layout_constraintBottom_toBottomOf="@id/tv_country_desc_title"
            app:layout_constraintStart_toEndOf="@+id/tv_country_desc_title" />

        <TextView
            android:id="@+id/tv_country_url_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:paddingBottom="10dp"
            android:text="@string/url_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_country_desc_title" />

        <TextView
            android:id="@+id/tv_url"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:autoLink="web"
            android:paddingBottom="10dp"
            app:layout_constraintBottom_toBottomOf="@id/tv_country_url_title"
            app:layout_constraintStart_toEndOf="@+id/tv_country_url_title" />

        <TextView
            android:id="@+id/tv_country_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:paddingBottom="10dp"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/tv_country_url_title"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/view_blur"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#80000000"
        android:visibility="gone" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_menu_show"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_add_white_24dp" />

    <LinearLayout
        android:id="@+id/ll_add_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/fab_menu_show"
        android:gravity="center"
        android:layout_marginEnd="16dp"
        android:visibility="gone"
        >

        <TextView
            android:id="@+id/tv_add_item"
            style="@style/Widget.Floating.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_country_code"
            android:visibility="visible"
            android:layout_marginRight="10dp"
            android:gravity="center_vertical"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_add_item"
            style="@style/Widget.Floating.SubMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_add_24"
            android:visibility="visible"
            app:layout_constraintBottom_toTopOf="@+id/fab_menu_show"
            app:layout_constraintStart_toStartOf="@+id/fab_menu_show" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>